fixed vs launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "mvdXML example on Duplex A",
             "type": "python",
             "request": "launch",
-            "program": "checker.py",
+            "program": "ifc_data_checker",
             "console": "integratedTerminal",
             "args": ["./rulesfiles/PredefinedType for IfcWall.yml", "./ifcfiles/Duplex-A.ifc"]
         },
@@ -16,7 +16,7 @@
             "name": "Duplex MEP",
             "type": "python",
             "request": "launch",
-            "program": "checker.py",
+            "program": "ifc_data_checker",
             "console": "integratedTerminal",
             "args": ["./rulesfiles/duplex mep rules.yml", "./ifcfiles/Duplex-MEP.ifc"]
         },
@@ -24,7 +24,7 @@
             "name": "Duplex A",
             "type": "python",
             "request": "launch",
-            "program": "checker.py",
+            "program": "ifc_data_checker",
             "console": "integratedTerminal",
             "args": ["./rulesfiles/duplex a rules.yml", "./ifcfiles/Duplex-A.ifc"]
         },
@@ -32,7 +32,7 @@
             "name": "FZK Haus (type checking)",
             "type": "python",
             "request": "launch",
-            "program": "checker.py",
+            "program": "ifc_data_checker",
             "console": "integratedTerminal",
             "args": ["./rulesfiles/fzk haus rules.yml", "./ifcfiles/FZK-Haus.ifc"]
         }
